Change nodeplugin upgrade strategy and introduce postStart hook (#986)
We had two known problems wrt nodeplugin, i.e, reboot and variation of reboot during upgrade. For upgrade our earlier response was to have admin deploy nodeplugin during a maintenance window and drain nodes which was using volumes. We didn't have any specific solution for reboot scenario other than asking deployments to scale down & up.

With the help of users feedback/suggestions, these are solved as below:
1. Set nodeplugin upgrade strategy as `OnDelete`, via this admin can selectively choose which nodeplugin to get upgraded and can delete post operator upgrade, the side effect is nullifying all the effort we put into separating the helm charts. However, having a correct solution is worth the effort rather than leaving it.
2. Use a postStart lifecycle hook on nodeplugin to restart gluster process, this needs a bit of enhancement, however as this is a tested sol going w/ it for now.

Credits:
1. @Compunctus from https://github.com/kadalu/kadalu/issues/913#issuecomment-1322495384
2. @sky-philipalmeida from https://github.com/kadalu/kadalu/pull/645#issuecomment-2082117053

* manual revert of pr#608
* manual revert of pr#615
* change nodeplugin upgrade strategy and add postStart

Signed-off-by: Leela Venkaiah G <leelavg@thoughtexpo.com>

--- a/doc/quick-start-yaml.adoc
+++ b/doc/quick-start-yaml.adoc
@@ -5,7 +5,6 @@
 [source,console]
 ----
 $ kubectl apply -f https://github.com/kadalu/kadalu/releases/latest/download/kadalu-operator.yaml
-$ kubectl apply -f https://github.com/kadalu/kadalu/releases/latest/download/csi-nodeplugin.yaml
 ----
 
 You have different flavors of operator yaml files available. Mainly for kubernetes (default), openshift, RKE, Microk8s. Find the relevant file from https://github.com/kadalu/kadalu/tree/devel/manifests[here]. Just remember to use the raw file as argument to `kubectl`.
@@ -73,13 +72,13 @@ Check the status of Pods using,
 $ kubectl get pods -n kadalu
 NAME                             READY   STATUS    RESTARTS   AGE
 server-storage-pool-1-kube1-0    1/1     Running   0          84s
-csi-nodeplugin-5hfms             3/3     Running   0          30m
-csi-nodeplugin-924cc             3/3     Running   0          30m
-csi-nodeplugin-cbjl9             3/3     Running   0          30m
-csi-provisioner-0                5/5     Running   0          30m
+csi-nodeplugin-5hfms             2/2     Running   0          30m
+csi-nodeplugin-924cc             2/2     Running   0          30m
+csi-nodeplugin-cbjl9             2/2     Running   0          30m
+csi-provisioner-0                3/3     Running   0          30m
 operator-6dfb65dcdd-r664t        1/1     Running   0          30m
 ----
 
 
-After this, go ahead and link:./csi-to-claim-persistent-volumes.adoc[create your PVC and attach] it to other applications.
+After this, go ahead and link:create-pvc.adoc[create your PVC and attach] it to other applications.
 
